# hsrp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hsrp.tex  main.cc
.github/workflows/: latex.yml
API/: CMakeLists.txt  crypto.h
src/: Administrator.h  CMakeLists.txt  Group.h  User.h
tests/: CMakeLists.txt
